Make findbugs happy again.